# bjj

./: .gitignore  AUTHORS  LICENSE  README.md  requirements.txt  sample_config.xml  setup.cfg
bjj/: bjj.py  handlers.py  j2test.py
bjj/parts/: blockBuildWhenDownstreamBuilding.part  blockBuildWhenUpstreamBuilding.part  builders.part  concurrentBuild.part  description.part  disabled.part  jobtemplate.yml  project.part  properties.part
bjj/parts/builders/: base.part  hudson.tasks.Maven.part  hudson.tasks.Shell.part
bjj/parts/properties/: base.part
bjj/parts/properties/hudson.model.ParametersDefinitionProperty/parameterDefinitions/: hudson.model.BooleanParameterDefinition.part  hudson.model.ChoiceParameterDefinition.part.save  hudson.model.FileParameterDefinition.part  hudson.model.PasswordParameterDefinition.part  hudson.model.StringParameterDefinition.part  hudson.model.TextParameterDefinition.part
bjj/tmpls/builders/: hudson.tasks.Shell.tmpl
bjj/tmpls/logRotator/: base.tmpl
bjj/tmpls/project/: project.tmpl
bjj/tmpls/properties/: base.tmpl
bjj/tmpls/scm/: base.tmpl
tests/: test_bjj.py  test_megajob.py  test_parsers.py
tests/parts/project/: project.yaml
tests/parts/properties/: boolean.yaml  choice.yaml  file.yaml  password.yaml  string.yaml  text.yaml
tests/xml/properties/: boolean.xml  choice.xml  file.xml  password.xml  string.xml  text.xml
tests/yaml/properties/: boolean.yaml  choice.yaml  file.yaml  password.yaml  string.yaml  text.yaml
(+4 files in other folders)
