[metadata]
name = bjj
author = Aleksey Maksimov
author-email = ctpeko3a@gmail.com
summary = Convert Jenkins job config.xml to jenkins-job-builder YAML
description-file = README.md
home-page = https://github.com/lechat/bjj
license = MIT
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: MIT Software License
        Operating System :: OS Independent
        Programming Language :: Python
[files]
packages=
    bjj
data_files =
    bjj/parts = bjj/parts/*
[entry_points]
console_scripts=
    bjj = bjj.bjj:main
